# open-seo-advisor-skill

./: .collab-rules.md  .gitignore  CHANGELOG.md  CONTRIBUTING.md  QUICKSTART.md  README.md  SECURITY.md  SKILL.md  install.ps1  install.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
docs/: ai-matrix-os.md  capability-map.md  connector_contract.md  content_writer_guide.md  image_material_mode.md  methodology.md  modes.md  roadmap.md
scripts/: pyproject.toml
scripts/seo_advisor/: __init__.py  _console_encoding.py  beginner_report.py  cli.py  crawler.py  demo.py  errors.py  models.py  router.py  scan_runner.py  scoring.py  url_utils.py  wizard.py
scripts/seo_advisor/ads/: cli.py  models.py
scripts/seo_advisor/ads/providers/: meta.py
scripts/seo_advisor/analyzers/: technical.py
scripts/seo_advisor/autopilot/: cli.py  models.py  report.py  runner.py
scripts/seo_advisor/connectors/: base.py  http.py  local_archive.py  ssh.py
scripts/seo_advisor/ecommerce/: report.py
scripts/seo_advisor/fixers/: __init__.py  cli.py  models.py  runner.py
scripts/seo_advisor/growth/: analytics.py  report.py  runner.py
scripts/seo_advisor/images/: cli.py
scripts/seo_advisor/images/providers/: openai.py
scripts/seo_advisor/knowledge/: __init__.py  methodology.yaml
scripts/seo_advisor/matrix/: router.py
scripts/seo_advisor/matrix/engines/: mock_engine.py
scripts/seo_advisor/plugins/: __init__.py
scripts/seo_advisor/security/: network_policy.py  ssh_path_safety.py
scripts/seo_advisor/security_mode/: cli.py  cloaking.py  cms.py  runner.py
scripts/seo_advisor/writers/: __init__.py
scripts/seo_advisor/writers/providers/: anthropic.py  openai.py
scripts/tests/: test_ads.py  test_autopilot.py  test_beginner_report.py  test_friendly_errors.py  test_http_connector.py  test_knowledge.py  test_local_archive_connector.py  test_matrix.py  test_router.py  test_scan_runner.py  test_scoring.py  test_security_mode_runner.py  test_ssh_connector.py  test_technical_analyzer.py  test_technical_hreflang_cwv.py  test_technical_social.py  test_url_utils.py  test_wheel_packaging.py
(+4 files in other folders)
